# chat-app-client-with-GUI-

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  resources.qrc
Pages/ForgetPwd/: forgetpwd.cpp  forgetpwd.h  forgetpwd.ui
Pages/LoginPage/: login.cpp  login.h  login.ui
Pages/MainPage/: ChatDelegate.cpp  ChatDelegate.h  chatmain.cpp  chatmain.h  chatmain.ui
Pages/RegisterPage/: register.cpp  register.h  register.ui
QSS/: chatStyle.qss  loginStyle.qss  registerStyle.qss
src/: Buffer.cpp  Buffer.h  Client.cpp  Client.h  Common.cpp  Common.h  HeartBeatReq.cpp  HeartBeatReq.h  LoadUserInfo.cpp  LoadUserInfo.h  LoginReq.cpp  LoginReq.h  RegisterReq.cpp  RegisterReq.h  Request.cpp  Request.h  Response.cpp  Response.h  SendMsgReq.cpp  SendMsgReq.h
